feat: Complete Lucide React icon integration throughout portfolio
- Add navigation icons (User, Star, Monitor, Server, Layers)
- Add complexity indicators with visual icons (CheckCircle, AlertCircle, XCircle)
- Add project type indicators (Monitor, Server, Layers)
- Enhance contact and skillset sections with professional icons
- Add action icons to project cards (Github, ExternalLink)
- Improve visual hierarchy and user experience
- All icons properly styled with hover effects and consistent sizing
- Build successful with optimized bundle sizes

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "lucide-react": "^0.545.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
